[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling system using constrained decoding with small LLMs"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "llm-sdk",
]

[tool.uv.sources]
llm-sdk = { path = "./llm_sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["llm_sdk", ".venv", "moulinette"]

